Fix and add missing gap rules for main content

--- a/css/style.css
+++ b/css/style.css
@@ -102,10 +102,23 @@ body {
     gap: 20px;
 }
 
+.projects,
+.announcements,
+.trending {
+    display: grid;
+    grid-template-rows: var(--font-large) 1fr;
+    gap: 20px;
+}
+
+.misc-section {
+    display: grid;
+    gap: 20px;
+}
 .projects .card-group {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template: 1fr / 1fr 1fr;
     gap: 20px;
+    grid-auto-rows: 1fr;
 }
 
 .card {
@@ -120,6 +133,7 @@ body {
     grid-template-rows: 1rem 1fr 30px;
     border-left: 10px solid orange;
 }
+
 
 .misc-section .card {
     grid-template-rows: 1rem 1fr;
